# bachelors_graduation_work

./: .gitignore  CMakeLists.txt  app_settings.ini  auto_image_handler.cpp  auto_image_handler.h  image_data.cpp  image_data.h  image_handler.cpp  image_handler.h  image_handler_initializer.cpp  image_handler_initializer.h  image_handler_worker.cpp  image_handler_worker.h  image_provider.cpp  image_provider.h  language_switcher.cpp  language_switcher.h  main.cpp  password_manager.cpp  password_manager.h  qml.qrc  recognition_image_handler.cpp  recognition_image_handler.h  style_control.cpp  style_control.h  video_capture.cpp  video_capture.h  video_file_capture.cpp  video_file_capture.h
file_system/: default_dir_creator.cpp  default_dir_creator.h  dir_names.h  dir_paths.cpp  dir_paths.h  individual_checker.cpp  individual_checker.h  individual_file_manager.cpp  individual_file_manager.h  janitor.cpp  janitor.h
models/: all_people.cpp  all_people.h  available_people.cpp  available_people.h  base_people.cpp  base_people.h  selected_imgs.cpp  selected_imgs.h  selected_people.cpp  selected_people.h
qml/: Main_menu.qml  Startup_password_input.qml  main.qml
qml/common/: Back_btn.qml  Full_screen_img.qml
qml/delegates/: Individual.qml  Select_individual.qml  Selected_img.qml  Selected_img_only_img.qml  Source_and_extr_imgs.qml
qml/main_menu_pages/about/: About.qml
qml/main_menu_pages/add_new/: Auto_mode_select_one_image.qml  Check_auto_retrieved_images.qml  Nickname_input.qml  Process_images.qml  Select_images.qml
qml/main_menu_pages/help/: Help.qml
qml/main_menu_pages/people/: All_people.qml  Edit_individual.qml
qml/main_menu_pages/photos/: Recognition.qml  Select_people_for_recognition.qml
qml/main_menu_pages/settings/: Settings.qml
qml/main_menu_pages/video/: Recognition.qml
qml/main_menu_pages/webcam/: Recognition.qml  Select_people_for_recognition_webcam.qml
translations/: app_en.ts  app_fr.ts  app_ru.ts  call
